--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -10,6 +10,11 @@ h2{
     max-width: 1600px;
     margin: 0 auto;
 }
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+     
 .home{
     color:whitesmoke;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -22,10 +27,30 @@ nav a {
     text-decoration: none;
     padding: 35px;
 }
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+}
 #hero-img h1 {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2em;
+}
+.card-img, .mountains {
+    width: 100%;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+}
+#hero-msg h4 {
+    color: white;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
 }
 .button-box {
     text-align: center;
@@ -52,6 +77,9 @@ body {
 }
 header {
     background-color: #3A5743;
+
+display: grid;
+grid-template-columns: 150px auto;
 
 }
 nav a:hover {
@@ -86,7 +114,10 @@ nav a:hover {
     background-color: #F06449;
     color: whitesmoke;
     line-height: 1.5em;
-    padding: 35px
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 .msg h2{
     color: whitesmoke;
@@ -104,6 +135,9 @@ footer{
     color: whitesmoke;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 } 
 footer a {
     color:#5BC3EB;
@@ -142,12 +176,69 @@ footer .social img{
     margin: 200px 0;
 }
 .card-img{
-    border: 10px solid #EDE6E3
+    border: 10px solid #EDE6E3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
 }
 .mountains{
     margin: 200px 0;
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 .logo{
     width: 80px
 }
-
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
