--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -14,13 +14,16 @@ nav {
     display: flex;
     justify-content: space-around;
 }
-     
+
 .home{
     color:whitesmoke;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-top: 10px;
 }
-
+.home-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}   
 nav a {
     text-align: center;
     color: whitesmoke;
@@ -39,18 +42,19 @@ nav a {
 .card-img, .mountains {
     width: 100%;
 }
-
-#hero-box {
-    grid-column: 1/4;
-    grid-row: 1/3;
-}
-#hero-msg h4 {
+#hero-msg {
     color: white;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+    text-align: center;
 }
 #hero-box {
     grid-column: 1/4;
     grid-row: 1/3;
     z-index: -1;
+    width: 100%;
+    height: 100%;
 }
 .button-box {
     text-align: center;
@@ -70,6 +74,9 @@ main section img{
 #background {
     height: 725px; 
     background-color:#5BC3EB;
+    grid-column: 1/11;
+    grid-row: 4/9;
+    margin-bottom: 50px;
 }
 
 body {
@@ -162,18 +169,21 @@ footer .social img{
 }
 
 .camping-card {
-    justify-self: center;
+    grid-column: 5/7;
     margin: 200px 0;
+    grid-row: 2/3;
 }
 
 .rivers-card {
-    justify-self: center;
+    grid-column: 2/4;
     margin: 200px 0;
+    grid-row: 2/3;
 }
 
 .rapids-card {
-    justify-self: center;
+    grid-column: 8/10;
     margin: 200px 0;
+    grid-row: 2/3;
 }
 .card-img{
     border: 10px solid #EDE6E3;
@@ -225,6 +235,7 @@ footer .social img{
     }
     .home-title {
         font-size: 25px;
+        color:#6f7364
     }
     .rivers-card, .camping-card, .rapids-card { 
         margin: 50px auto;
