--- a/technical_teamwork/styles/styles.css
+++ b/technical_teamwork/styles/styles.css
@@ -19,6 +19,7 @@ header {
     justify-content: space-between;
     align-items: center;
     background-color: #252525;
+    height: 80px;
     padding: 10px 20px;
 }
 
@@ -31,6 +32,7 @@ nav a {
     text-decoration: none;
     margin: 0 15px;
     font-weight: bold;
+    font-size: 30px;
 }
 
 nav a:hover {
@@ -139,13 +141,13 @@ button:hover {
     margin: 10px auto;
     line-height: 1.6;
     color: #555;
+    grid-column: 1/2;
 }
 
 /* Characters Section */
 .characters_main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 #character_1,
