--- a/technical_teamwork/styles/styles.css
+++ b/technical_teamwork/styles/styles.css
@@ -47,7 +47,7 @@ nav a:hover {
 /* Hero Section */
 #hero {
     position: relative;
-   
+    width: 100%;
     background: url('images/hero-background.jpg') no-repeat center center/cover;
 }
 
@@ -58,7 +58,9 @@ nav a:hover {
 
 .hero_image {
     max-width: 100%;
+    
     height: auto;
+    
     display: block;
     z-index: 1;
     background-color: #014444;
