--- a/prove/p2_coolpics/style.css
+++ b/prove/p2_coolpics/style.css
@@ -7,11 +7,10 @@ header, footer{
     background-color: rgb(49, 121, 255);
     color: white;
     text-align: center;
-    
     padding: 5px;
 }
 header, footer, main{
-    max-width: 1000px;
+    max-width: 2000px;
     margin: auto;
 }
 main{
@@ -29,15 +28,57 @@ main{
 }
 nav{
     display: none;
+    
+}
+nav a{
+    color: white;
+    padding: 15px;
 }
 h2{
     text-align: center;
+    background-color: rgb(192, 192, 192);
 }
 #cool_pics{
     text-align: center;
     padding: 5px;
+
 }
 img{
     border: 4px solid white;
     box-shadow: 0px 3px 6px;
+    max-width: 300px;
 }
+
+@media screen and (min-width: 700px) {
+    main{
+        display: grid;
+        grid-template-columns: 1fr 1fr;   
+    }
+    h2{
+        grid-column: 1/3;
+    }
+
+}  
+
+@media screen and (min-width: 1024px) {
+    header, footer, main{
+        max-width: 2000px;
+    }
+    main{
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+         }
+    .menu_btn{
+            display:none
+        }
+    nav{
+            display: inline-block;
+        }
+    #cool_pics{
+            padding: 5px;
+    }
+    h2{
+        grid-column: 1/4;
+    }
+}
+
