--- a/prove/p2_coolpics/style.css
+++ b/prove/p2_coolpics/style.css
@@ -25,6 +25,7 @@ main{
     border: none;
     text-align: center;
     font-size: large;
+
 }
 nav{
     display: none;
@@ -38,7 +39,7 @@ h2{
     text-align: center;
     background-color: rgb(192, 192, 192);
 }
-#cool_pics{
+.cool_pics{
     text-align: center;
     padding: 5px;
 
@@ -47,6 +48,11 @@ img{
     border: 4px solid white;
     box-shadow: 0px 3px 6px;
     max-width: 300px;
+}
+.show{
+    display: flex;
+    flex-direction: column;
+
 }
 
 @media screen and (min-width: 700px) {
@@ -74,7 +80,7 @@ img{
     nav{
             display: inline-block;
         }
-    #cool_pics{
+    .cool_pics{
             padding: 5px;
     }
     h2{
