--- a/prove/p2_coolpics/style.css
+++ b/prove/p2_coolpics/style.css
@@ -42,12 +42,13 @@ h2{
 .cool_pics{
     text-align: center;
     padding: 5px;
+    max-width: 300px;
 
 }
 img{
     border: 4px solid white;
     box-shadow: 0px 3px 6px;
-    max-width: 300px;
+    
 }
 .show{
     display: flex;
@@ -55,6 +56,30 @@ img{
 
 }
 
+#grey_area{
+    opacity:.8;
+    background-color:#424242;
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0px;
+    left:0px;
+    z-index:1000;
+}
+#modul{
+    
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0px;
+    left:0px;
+    z-index:1000;
+}
+#modul_img{
+    max-width: 500px;
+    opacity:2;
+
+}
 @media screen and (min-width: 700px) {
     main{
         display: grid;
